[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/textures/Enemy1/Wraith_01.png" type="Texture" id=1]
[ext_resource path="res://Scenes/characters/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 18 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 19 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.182692, 0.182692 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, -1 )
shape = SubResource( 2 )

[node name="timer_recuo" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="timer_recuo" to="." method="_on_timer_recuo_timeout"]
